# avply

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  Taskfile.yml  avply.toml  build-and-test.ps1  build.ps1  vcutter.toml
.github/workflows/: release.yml
src/: AudioSinkHealth.h  AudioWorker.cpp  AudioWorker.h  Config.cpp  Config.h  Encoder.cpp  Encoder.h  FfmpegRunner.cpp  FfmpegRunner.h  MainWindow.cpp  MainWindow.h  Normalizer.cpp  Normalizer.h  OutputNamer.cpp  OutputNamer.h  RangeSlider.cpp  RangeSlider.h  SeekPreview.cpp  SeekPreview.h  Settings.cpp  Settings.h  SilenceTone.cpp  SilenceTone.h  SingleInstance.cpp  SingleInstance.h  SpeechEnhancer.cpp  SpeechEnhancer.h  ThumbnailExtractor.cpp  ThumbnailExtractor.h  VideoOutput.qml  VideoView.cpp  VideoView.h  VoiceClarity.cpp  VoiceClarity.h  icons.qrc  main.cpp
tests/: CMakeLists.txt  test_FfmpegRunner_path.cpp  test_OutputNamer.cpp  test_RangeSlider.cpp  test_SeekPreview.cpp  test_Settings.cpp
